<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.vrm.invercasa.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_slide3"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextOverviewDark">
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColor="@color/colorTextPrimaryDark"
                android:textColorHighlight="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextOverviewDark">
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColor="@color/colorTextPrimaryDark"
                android:textColorHighlight="@color/colorAccent"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/checkboxRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_remember"
            android:textColor="@color/colorTextPrimaryDark"
            android:buttonTint="@color/colorAccent"
            android:layout_gravity="left"/>
        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorTextPrimaryDark"
            android:textAllCaps="false"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <View
                android:layout_width="@dimen/line_width"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="@dimen/line_height"
                android:background="@color/colorTextPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_or"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimaryDark"/>
            <View
                android:layout_width="@dimen/line_width"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="@dimen/line_height"
                android:background="@color/colorTextPrimaryDark"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorTextPrimaryDark"
            android:textAllCaps="false"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/prompt_forgot_password"
        android:textColor="@color/colorTextOverviewDark"/>
</RelativeLayout>